<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/movieDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/movie_details"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/movieImage"
            android:layout_width="109dp"
            android:layout_height="92dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/movieDetails"
            tools:layout_editor_absoluteX="258dp" />

        <TextView
            android:id="@+id/movieId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/movie_id"
            app:layout_constraintTop_toBottomOf="@+id/movieImage"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movieIdLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movieId"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movieIdLabel"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movieTitleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/movieGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/movie_genre"
            app:layout_constraintTop_toBottomOf="@+id/movieTitleLabel"
            tools:layout_editor_absoluteX="-2dp" />

        <TextView
            android:id="@+id/movieGenreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movieGenre"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/movieYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/movie_year"
            app:layout_constraintTop_toBottomOf="@+id/movieGenreLabel"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movieYearLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movieYear"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/movieRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/movie_runtime"
            app:layout_constraintTop_toBottomOf="@+id/movieYearLabel"
            tools:layout_editor_absoluteX="-2dp" />

        <TextView
            android:id="@+id/movieRuntimeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movieRuntime"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movieActors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/movie_actors"
            app:layout_constraintTop_toBottomOf="@+id/movieRuntimeLabel"
            tools:layout_editor_absoluteX="-2dp" />

        <TextView
            android:id="@+id/movieActorsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movieActors"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/moviePlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/movie_plot"
            app:layout_constraintTop_toBottomOf="@+id/movieActorsLabel"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/moviePlotLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/moviePlot"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/movieCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/movie_country"
            app:layout_constraintTop_toBottomOf="@+id/moviePlotLabel"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movieCountryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movieCountry"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/movieLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/movie_language"
            app:layout_constraintTop_toBottomOf="@+id/movieCountryLabel"
            tools:layout_editor_absoluteX="-2dp" />

        <TextView
            android:id="@+id/movieLanguageLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movieLanguage"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/movieDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/movie_director"
            app:layout_constraintTop_toBottomOf="@+id/movieLanguageLabel"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movieDirectorLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movieDirector"
            tools:layout_editor_absoluteX="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>